[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dialog/menu_section_9patch.png" type="Texture" id=1]
[ext_resource path="res://Dialog/Dialogue.gd" type="Script" id=2]
[ext_resource path="res://Dialog/ChoiceButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/Awake.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/Space_NinePatchRect.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="Dialogue" type="NinePatchRect"]
pause_mode = 2
margin_left = 71.2173
margin_top = 383.435
margin_right = 521.217
margin_bottom = 563.435
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
ChoiceButton = ExtResource( 3 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 27.0
margin_top = 28.0
margin_right = 417.0
margin_bottom = 153.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "dfssdffasddf"
text = "dfssdffasddf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -14.1237
margin_top = -16.0507
margin_right = 120.876
margin_bottom = 14.9493
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Name_NinePatchRect"]
margin_left = 5.36514
margin_top = 5.08832
margin_right = 130.365
margin_bottom = 27.0883
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Christopher"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space_NinePatchRect" parent="." instance=ExtResource( 5 )]

[node name="ChoicePos" type="Position2D" parent="."]
position = Vector2( 428.484, 90.7691 )
